--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Recipe Search</title>
+    <title>Recipe Search</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Food Recipe Search</h1>
+        <h1>Search Recipes</h1>
         <form id="searchForm">
-            <input type="text" id="searchInput" placeholder="Search for recipes...">
+            <input type="text" id="searchInput" placeholder="Enter Ingredient">
             <button type="submit">Search</button>
         </form>
     </header>
